prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/loop_controller_not_in_loop_break.nut
// EXPECT_ERROR: "has to be in a loop block"
function foo() {
    break
}
